fix: remove input inner shadow on ios

--- a/src/framework/theme/components/input/_input.directive.theme.scss
+++ b/src/framework/theme/components/input/_input.directive.theme.scss
@@ -17,7 +17,7 @@
     border-width: nb-theme(input-border-width);
     color: nb-theme(input-text-color);
     font-family: nb-theme(input-text-font-family);
-    @include nb-component-animation(border, background-color, color);
+    -webkit-appearance: none; // removes inner shadow on iOS
 
     &::placeholder {
       color: nb-theme(input-placeholder-text-color);
